--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "bootstrap": "^5.3.2",
     "leaflet": "^1.9.4",
     "next": "^14.1.0",
     "node.js": "^0.0.1-security",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-carousel": "^4.3.0",
     "react-dom": "^18.2.0",
     "react-easy-swipe": "^0.0.23",
     "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
+    "react-responsive": "^9.0.2",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
     "react-spring": "^9.7.3",
