--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@use-gesture/react": "^10.3.1",
     "bootstrap": "^5.3.2",
     "leaflet": "^1.9.4",
     "next": "^14.1.0",
@@ -25,12 +26,20 @@
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
     "react-spring": "^9.7.3",
-    "react-use-gesture": "^9.1.3",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.25.9",
     "@babel/preset-react": "^7.26.3",
+    "@types/babel__core": "^7.20.5",
+    "@types/babel__generator": "^7.27.0",
+    "@types/babel__template": "^7.4.4",
+    "@types/babel__traverse": "^7.20.7",
+    "@types/istanbul-lib-report": "^3.0.3",
+    "@types/istanbul-reports": "^3.0.4",
+    "@types/prop-types": "^15.7.15",
+    "@types/stack-utils": "^2.0.3",
+    "@types/webxr": "^0.5.22",
     "eslint": "^8",
     "eslint-config-next": "14.0.4"
   }
