--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@mui/icons-material": "^7.2.0",
+    "@mui/material": "^7.2.0",
+    "@nlpjs/basic": "^5.0.0-alpha.5",
     "@use-gesture/react": "^10.3.1",
     "bootstrap": "^5.3.2",
     "leaflet": "^1.9.4",
