--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nlpjs/basic": "^5.0.0-alpha.5",
     "@use-gesture/react": "^10.3.1",
     "bootstrap": "^5.3.2",
+    "framer-motion": "^12.23.12",
     "leaflet": "^1.9.4",
     "next": "^14.1.0",
     "node.js": "^0.0.1-security",
