--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "leaflet": "^1.9.4",
     "next": "^14.1.0",
     "node.js": "^0.0.1-security",
+    "nodemailer": "^7.0.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-carousel": "^4.3.0",
